--- a/app/assets/javascripts/templates/_questions.html
+++ b/app/assets/javascripts/templates/_questions.html
@@ -1,32 +1,37 @@
 <div class="page-header">
   <h3>
-    {{question.body}}
-    {{question.lessonLink}}
-    {{question.githubLink}}
-    <a ng-show="question.link" href="{{post.link}}">
-      {{post.title}}
-    </a>
-    <span ng-hide="post.link">
-      {{post.title}}
-    </span>
+    {{question.body}}</br>
   </h3>
+  <p>
+    Learn link: {{question.lessonLink}}</br>
+    Github link: {{question.githubLink}}</br>
+    Asked by: {{question.user.name}}</br>
+  </p>
 </div>
 
 <div ng-repeat="answer in question.answers | orderBy:'-upvotes'">
-  <span class="glyphicon glyphicon-thumbs-up"
+  <span class="glyphicon glyphicon-chevron-up"
     ng-click="incrementUpvotes(answer)"></span>
-  {{answer.votes}} - by {{answer.author}}
+  {{answer.votes}} - by {{answer.user.name}}
   <span style="font-size:20px; margin-left:10px;">
     {{answer.body}}
   </span>
 </div>
 
-<form ng-submit="addAnswer()"
-  style="margin-top:30px;">
-  <h3>Add Answer</h3>
+<div class="answer">
+  <p>  <span class="glyphicon glyphicon-chevron-up"
+      ng-click="incrementUpvotes(answer)"></span>
+    0 - by {{answer.user.name}}
+    <span style="font-size:20px; margin-left:10px;">
+      {{body}}
+    </span>
+  <p>
+  <form ng-submit="addAnswer()" ng-show="user.name" style="margin-top:20px;">
+    <h3>Add Answer</h3>
 
-  <div class="form-group">
-    <textarea class="form-control" placeholder="Answer" ng-model="body"></textarea>
-  </div>
-  <button type="submit" class="btn btn-default">Submit</button>
-</form>
+    <div class="form-group">
+      <textarea class="form-control" rows="4" placeholder="Answer" ng-model="body"></textarea>
+    </div>
+    <button type="submit" class="btn btn-default">Submit</button>
+  </form>
+</div>
