--- a/app/assets/javascripts/templates/_questions.html
+++ b/app/assets/javascripts/templates/_questions.html
@@ -9,28 +9,18 @@
   </p>
 </div>
 
-<div ng-repeat="answer in question.answers | orderBy:'-upvotes'">
+<blockquote ng-repeat="answer in question.answers | orderBy:'-upvotes'">
   <span class="glyphicon glyphicon-chevron-up"
     ng-click="incrementUpvotes(answer)"></span>
   {{answer.votes}} - by {{answer.user.name}}
-  <span style="font-size:20px; margin-left:10px;">
-    {{answer.body}}
-  </span>
-</div>
+  <b>{{answer.body}}</b>
+</blockquote>
 
 <div class="answer">
-  <p>  <span class="glyphicon glyphicon-chevron-up"
-      ng-click="incrementUpvotes(answer)"></span>
-    0 - by {{answer.user.name}}
-    <span style="font-size:20px; margin-left:10px;">
-      {{body}}
-    </span>
-  <p>
-  <form ng-submit="addAnswer()" ng-show="user.name" style="margin-top:20px;">
+  <form name="answerForm" ng-submit="answerForm.$valid && addAnswer()" ng-show="user.name" novalidate style="margin-top:20px;">
     <h3>Add Answer</h3>
-
     <div class="form-group">
-      <textarea class="form-control" rows="4" placeholder="Answer" ng-model="body"></textarea>
+      <textarea class="form-control" rows="4" placeholder="Answer" ng-model="body" ng-minLenght="10" required></textarea>
     </div>
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
