--- a/app/assets/javascripts/templates/_main.html
+++ b/app/assets/javascripts/templates/_main.html
@@ -4,49 +4,14 @@
       <div class="page-header">
         <h1>learnExchange</h1>
       </div>
-    </div>
+      <search-form>Search</search-form>
   </div>
+ </div>
+<hr>
   <div class="row">
-      <div class="col-md-12">
-        <div class="form-group">
-          Search: <input class="form-control" ng-model="query" />
-          Sort by: <form name="sort" class="form-group">
-                      <label>
-                        <input type="radio" ng-model="orderProp" value="votes">
-                        Ascending
-                      </label><br/>
-
-                      <label>
-                        <input type="radio" ng-model="orderProp" value="-votes">
-                        Descending
-                      </label><br/>
-                     </form>
-        </div>
-      </div>
       <!-- nested view start -->
-      <ul class="nav nav-pills">
-        <li role="presentation"><a ui-sref=".detail">Detailed View</a></li>
-        <li role="presentation"><a ui-sref=".normal" >Normal View</a></li>
-        <li role="presentation"><a ui-sref="about" >About</a></li>
-      </ul>
-      <div ui-view style="margin-top:20px;"></div>
+      <div ui-view style="margin-top:10px;"></div>
   </div>
-
-  <div class="row" ng-show="user.name" style="margin-top:20px;">
-      <div class="col-md-12">
-        <h1>Ask a Question</h1>
-
-        <form name="questionForm" ng-submit="questionForm.$valid && addQuestion()" novalidate>
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Ask..." ng-model="body" required></input>
-          </div>
-          <div class="form-group">
-            <input type="url" ng-patter="url" class="form-control" placeholder="Link to Lesson: http://learn.co" ng-model="lessonLink" required></input>
-          </div>
-          <div class="form-group">
-            <input type="url" class="form-control" placeholder="Link to Github Repo: http://www.github.com" ng-model="githubLink" required></input>
-          </div>
-          <button type="submit" class="btn btn-primary">Question</button>
-        </form>
-      </div>
-</div>
+  <hr>
+  <button class="btn btn-default" ng-click="showForm = !showForm" ng-model="showForm">{{showForm ? "Cancel" : "Ask a Question"}}</button>
+  <div ng-show="showForm" class="well"><question-form>Question</question-form></div>
