--- a/app/assets/javascripts/templates/_nav.html
+++ b/app/assets/javascripts/templates/_nav.html
@@ -1,9 +1,11 @@
-<div class="collapse navbar-collapse pull-right" ng-controller="NavController">
-  <ul class="nav navbar-nav">
-    <li><a href="#/home">Home</a></li>
-    <li ng-hide="signedIn()"><a href="#/login">Log In</a></li>
-    <li ng-hide="signedIn()"><a href="#/register">Register</a></li>
-    <li ng-show="signedIn()"><a href="#/">{{ user.username }}</a></li>
-    <li ng-show="signedIn()"><a ng-click="logout()">Log Out</a></li>
-  </ul>
+<nav class="navbar navbar-default">
+  <div class="collapse navbar-collapse pull-right" ng-controller="NavController">
+    <ul class="nav navbar-nav">
+      <li><a href="#/home">Home</a></li>
+      <li ng-hide="signedIn()"><a href="#/login">Log In</a></li>
+      <li ng-hide="signedIn()"><a href="#/register">Register</a></li>
+      <li ng-show="signedIn()"><a ng-click="logout()">Log Out</a></li>
+      <li><a ui-sref="about" >About</a></li>
+    </ul>
+  </div>
 </div>
