--- a/app/assets/javascripts/angular/auth/templates/_login.html
+++ b/app/assets/javascripts/angular/auth/templates/_login.html
@@ -1,16 +1,15 @@
+<div class="container">
 <div class="page-header">
-  <h1>Register</h1>
+  <h1>Log In</h1>
 </div>
 
-<form ng-submit="register()">
+<form ng-submit="login()">
   <div class="input-group">
     <input type="email" class="form-control" placeholder="Email" ng-model="user.email">
   </div>
   <div class="input-group">
-    <input type="text" class="form-control" placeholder="First Name" ng-model="user.name">
-  </div>
-  <div class="input-group">
     <input type="password" class="form-control" placeholder="Password" ng-model="user.password">
   </div>
-  <input type="submit" class="btn btn-default" value="Register">
+  <input type="submit" class="btn btn-default" value="Log In">
 </form>
+</div>
