--- a/app/assets/javascripts/angular/main/templates/_main.html
+++ b/app/assets/javascripts/angular/main/templates/_main.html
@@ -13,5 +13,6 @@
       <div ui-view style="margin-top:10px;"></div>
   </div>
   <hr>
+  <div ng-if="!user"><p>Log in to ask a question.</p></div>
   <button ng-show="user" class="btn btn-default" ng-click="showForm = !showForm" ng-model="showForm">{{showForm ? "Cancel" : "Ask a Question"}}</button>
   <div ng-show="showForm" class="well"><question-form>Question</question-form></div>
