--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= javascript_include_tag 'application' %>
   </head>
   <body ng-app='learnExchange'>
-    <div ng-include="'_nav.html'"></div>
+    <div ng-include="'angular/nav/templates/_nav.html'"></div>
     <ui-view></ui-view>
   </body>
 </html>
